<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_ongs"
        android:icon="@drawable/ongs"
        android:title="@string/title_ongs" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/perfil"
        android:title="@string/title_perfil"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/title_chat" />

</menu>